add the figure tag and add description in Alt

--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
         <header>
 
             <h1>Il mio Viaggio a Londra</h1>
-
-            <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="">
-            <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
-            <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="">
             
+            <!-- imaggini di Londra -->
+            <figure>
+
+                <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="London Eye in the night">
+                <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Tamigi in the night">
+                <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Big Ben in the night">
+                
+            </figure>
+
             <hr>
+
         </header>
+
+  
+
     </body>
 </html>
