add a scetion with a unordered list

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <main>
             
-            <!-- paragrafo delle mie spese -->
+            <!-- Sezione delle mie spese -->
             <section>
 
                 <h3>Le mie spese</h3>
@@ -74,6 +74,23 @@
                 </table>
 
                 <hr>
+            </section>
+
+            <section>
+
+                <!-- Sezione delle cose da fare -->
+
+                <h3>Cose da fare</h3>
+
+                <ul>
+                    <li>Visitare la tower of London &cross;</li>
+                    <li>Visitare Greenwich &check;</li>
+                    <li>Ascoltare un artista di strada &check; </li>
+                    <li>Mangiare il tipico fish and chips inglese &cross;</li>
+                </ul>
+
+                <hr>
+                
             </section>
 
 
