--- a/index.html
+++ b/index.html
@@ -90,7 +90,40 @@
                 </ul>
 
                 <hr>
-                
+
+            </section>
+
+            <section>
+
+                <h3>Info Utili:</h3>
+
+                <ol>
+                    <li>
+                        <span>Numeri utili di emergenza</span>
+                        <ul>
+                            <li><strong>999</strong> - Emergenza</li>
+                            <li><strong>101</strong> - Numero polizia</li>
+                            <li><strong>111</strong> - Numero assistenza medica</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <span>Hotel</span>
+                        <ul>
+                            <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                            <li><strong>Indirizzo hotel</strong>: Westminster, London, Regno Unito</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <span>Aereo</span>
+                        <ul>
+                            <li><strong>Volo di Andata</strong>: Y1234X, ore 9:30 da Milano Malpensa</li>
+                            <li><strong>Volo di Ritorno</strong>: Y1236X, ore 18:30 da London Heatrow</li>
+                        </ul>
+                    </li>
+                </ol>
+
             </section>
 
 
