added footer and concluded

--- a/index.html
+++ b/index.html
@@ -126,8 +126,16 @@
 
             </section>
 
-
+            <hr>
         </main>
+
+        <footer>
+            <h3>Le foto</h3>
+            <figure>
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="St paul cathedral in london">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge in london">
+            </figure>
+        </footer>
 
     </body>
 </html>
